--- a/app/src/main/res/layout-v26/activity_playermanagement.xml
+++ b/app/src/main/res/layout-v26/activity_playermanagement.xml
@@ -60,7 +60,7 @@
                     android:layout_height="wrap_content"
                     android:textSize="20sp"
                     android:text="@string/person_einf_gen"
-                    android:background="@drawable/knopf_blau"
+                    android:background="@drawable/buttonblue"
                     android:layout_marginRight="16dp"
                     android:layout_marginLeft="16dp"
                     android:layout_marginBottom="16dp"/>
