--- a/app/src/main/res/layout/activity_charakterselection.xml
+++ b/app/src/main/res/layout/activity_charakterselection.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.tobias.werwolf_v1.charakterauswahl">
+    tools:context="com.example.tobias.werwolf_v1.CharacterSelection">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -63,7 +63,7 @@
                 android:layout_marginLeft="16dp"
                 android:layout_marginRight="16dp"
                 android:layout_marginBottom="16dp"
-                android:background="@drawable/knopf_blau"
+                android:background="@drawable/buttonblue"
                 android:gravity="center"
                 android:text="@string/weiter"
                 android:textSize="20sp" />
