--- a/app/src/main/res/layout/activity_hostconnectwithplayers.xml
+++ b/app/src/main/res/layout/activity_hostconnectwithplayers.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/grey"
-    tools:context="com.example.tobias.werwolf_v1.Spielleiter_Verbinden">
+    tools:context="com.example.tobias.werwolf_v1.multipleDevices.HostConnectWithPlayers">
 
     <LinearLayout
         android:id="@+id/layoutModusPerson"
