--- a/app/src/main/res/layout/activity_loadingscreen.xml
+++ b/app/src/main/res/layout/activity_loadingscreen.xml
@@ -4,48 +4,50 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.tobias.werwolf_v1.sieg_activity"
+    tools:context="com.example.tobias.werwolf_v1.LoadingScreen"
     android:background="@color/grey">
-
 
     <ImageView
         android:id="@+id/bildCharakter"
-        android:layout_width="250dp"
-        android:layout_height="250dp"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.3"
-        app:srcCompat="@drawable/pokal_v1"
-        tools:ignore="ContentDescription" />
+        app:layout_constraintVertical_bias="0.42000002"
+        app:srcCompat="@drawable/werwolf_v2_icon_eckig" />
 
     <TextView
-        android:id="@+id/siegerText"
+        android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
-        android:gravity="center"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:text="Werwolf"
         android:textColor="@color/weiss"
-        android:textSize="25sp"
-        app:layout_constraintBottom_toTopOf="@+id/statbildschirmbutton"
+        android:textSize="38dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/bildCharakter" />
+        app:layout_constraintTop_toBottomOf="@+id/bildCharakter"
+        app:layout_constraintVertical_bias="0.0" />
 
-
-    <Button
-        android:id="@+id/statbildschirmbutton"
-        android:layout_width="match_parent"
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="16dp"
-        android:background="@drawable/knopf_blau"
-        android:gravity="center"
-        android:text="@string/startbildschirm"
-        android:textSize="20sp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:text="Version 2.0"
+        android:textColor="@color/weiss"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
