--- a/app/src/main/res/layout/activity_charakterselection.xml
+++ b/app/src/main/res/layout/activity_charakterselection.xml
@@ -78,13 +78,16 @@
             android:layout_marginLeft="16dp"
             android:layout_marginRight="16dp"
             android:layout_marginBottom="16dp"
+            android:paddingTop="16dp"
+            android:paddingLeft="16dp"
+            android:paddingRight="16dp"
             android:background="@drawable/knopf_grau"
             android:orientation="vertical">
 
             <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recyclerviewCharacterSelection"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:id="@+id/recyclerviewCharacterSelection"/>
+                android:layout_height="match_parent" />
 
         </LinearLayout>
 
