--- a/app/src/main/res/layout/item_character_selection.xml
+++ b/app/src/main/res/layout/item_character_selection.xml
@@ -1,18 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<LinearLayout android:layout_width="match_parent"
-    android:layout_height="64dp"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
-    android:layout_marginTop="2dp"
-    android:background="@color/hellgrau"
     android:id="@+id/layoutcharakterRolle"
+    android:layout_width="match_parent"
+    android:layout_height="64dp"
     android:layout_marginBottom="4dp"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    android:orientation="vertical">
 
     <LinearLayout
-        android:id="@+id/layoutWerwolf"
+        android:id="@+id/list_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
@@ -20,7 +18,7 @@
         android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/iconWerwolf"
+            android:id="@+id/textview_character_name"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
@@ -31,7 +29,7 @@
             android:textSize="30sp" />
 
         <TextView
-            android:id="@+id/nummerWerwolf"
+            android:id="@+id/textview_amount_character"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="4dp"
@@ -48,26 +46,26 @@
             android:orientation="horizontal">
 
             <ImageView
-                android:id="@+id/minusWerwolf"
-                app:srcCompat="@drawable/minus_v1"
-                tools:ignore="ContentDescription"
-                android:layout_width="53dp"
-                android:layout_height="53dp" />
-
-            <ImageView
-                android:id="@+id/plusWerwolf"
-                app:srcCompat="@drawable/plus_v1"
-                tools:ignore="ContentDescription"
+                android:id="@+id/image_reduce_character"
                 android:layout_width="53dp"
                 android:layout_height="53dp"
-                android:layout_marginStart="8dp" />
+                app:srcCompat="@drawable/minus_v1"
+                tools:ignore="ContentDescription" />
+
+            <ImageView
+                android:id="@+id/image_add_character"
+                android:layout_width="53dp"
+                android:layout_height="53dp"
+                android:layout_marginStart="8dp"
+                app:srcCompat="@drawable/plus_v1"
+                tools:ignore="ContentDescription" />
         </LinearLayout>
     </LinearLayout>
 
     <TextView
-        android:id="@+id/infoTextWerwolf"
+        android:id="@+id/textview_info"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:layout_marginBottom="16dp"
         android:layout_weight="1"
         android:text="@string/beschreibungWerwolf"
