viewbinding in manual

--- a/app/src/main/res/layout/activity_manual.xml
+++ b/app/src/main/res/layout/activity_manual.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.tobias.werwolf_v1.Manual"
+    tools:context="com.example.tobias.werwolf_v1.ManualActivity"
     android:background="@color/grey">
 
     <LinearLayout
