--- a/app/src/main/res/layout/fragment_character_selection.xml
+++ b/app/src/main/res/layout/fragment_character_selection.xml
@@ -1,76 +1,96 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/layoutcharakterRolle"
     android:layout_width="match_parent"
-    android:layout_height="64dp"
-    android:layout_marginBottom="4dp"
-    android:orientation="vertical">
+    android:layout_height="match_parent"
+    tools:context="com.example.tobias.werwolf_v1.pregame.PreGameActivity">
 
     <LinearLayout
-        android:id="@+id/list_layout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:gravity="end"
-        android:orientation="horizontal">
+        android:layout_height="match_parent"
+        android:background="@color/grey"
+        android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/textview_character_name"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:background="@drawable/rund_werwolf"
-            android:gravity="center"
-            android:text="@string/werwolf"
-            android:textColor="@color/weiss"
-            android:textSize="30sp" />
 
-        <TextView
-            android:id="@+id/textview_amount_character"
+        <LinearLayout
+            android:id="@+id/layoutModus"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="4dp"
-            android:layout_marginRight="4dp"
-            android:layout_weight="1.5"
-            android:gravity="center"
-            android:text="@string/zahl_0"
-            android:textSize="38sp" />
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
+            android:layout_marginBottom="16dp"
+            android:background="@drawable/leiste_orange"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/textModus"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:layout_marginBottom="8dp"
+                android:gravity="center"
+                android:text="@string/mit_karten"
+                android:textColor="@color/schwarz"
+                android:textSize="21sp"
+                android:textStyle="bold" />
+        </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1.2"
-            android:orientation="horizontal">
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
+            android:layout_marginBottom="16dp"
+            android:background="@drawable/knopf_grau"
+            android:orientation="vertical">
 
-            <ImageView
-                android:id="@+id/image_reduce_character"
-                android:layout_width="53dp"
-                android:layout_height="53dp"
-                app:srcCompat="@drawable/minus_v1"
-                tools:ignore="ContentDescription" />
+            <TextView
+                android:id="@+id/gesamtTxt"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="16dp"
+                android:layout_marginRight="16dp"
+                android:layout_marginBottom="8dp"
+                android:text="@string/gesamt_standartwert"
+                android:textColor="@color/weiss"
+                android:textSize="38sp" />
 
-            <ImageView
-                android:id="@+id/image_add_character"
-                android:layout_width="53dp"
-                android:layout_height="53dp"
-                android:layout_marginStart="8dp"
-                app:srcCompat="@drawable/plus_v1"
-                tools:ignore="ContentDescription" />
+
+            <Button
+                android:id="@+id/spiel_starten"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="16dp"
+                android:layout_marginRight="16dp"
+                android:layout_marginBottom="16dp"
+                android:background="@drawable/buttonblue"
+                android:gravity="center"
+                android:text="@string/weiter"
+                android:textSize="20sp" />
+
         </LinearLayout>
+
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
+            android:layout_marginBottom="16dp"
+            android:paddingTop="16dp"
+            android:paddingLeft="16dp"
+            android:paddingRight="16dp"
+            android:background="@drawable/knopf_grau"
+            android:orientation="vertical">
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recyclerviewCharacterSelection"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
+
+        </LinearLayout>
+
+
     </LinearLayout>
-
-    <TextView
-        android:id="@+id/textview_info"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_marginBottom="16dp"
-        android:layout_weight="1"
-        android:text="@string/beschreibungWerwolf"
-        android:textColor="@color/weiss"
-        android:textSize="20sp"
-        android:visibility="gone" />
-</LinearLayout>
-
+</androidx.constraintlayout.widget.ConstraintLayout>
