--- a/app/src/main/res/layout/fragment_cards_playermatching.xml
+++ b/app/src/main/res/layout/fragment_cards_playermatching.xml
@@ -2,8 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.example.tobias.werwolf_v1.CardsToPlayerMatching">
+    android:layout_height="match_parent">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
