removed hardcoded colors in layout

--- a/app/src/main/res/drawable/leiste_werwolf.xml
+++ b/app/src/main/res/drawable/leiste_werwolf.xml
@@ -3,7 +3,7 @@
     android:shape="rectangle"
     >
 
-    <solid android:color="@color/farbe_werwolf"/>
+    <solid android:color="@color/werwolf"/>
     <corners android:bottomLeftRadius="25dp"
         android:bottomRightRadius="25dp"/>
 
