--- a/app/src/main/res/layout-v21/activity_nightlist.xml
+++ b/app/src/main/res/layout-v21/activity_nightlist.xml
@@ -69,7 +69,7 @@
             android:layout_marginTop="16dp"
             android:layout_marginRight="16dp"
             android:layout_marginBottom="16dp"
-            android:background="@drawable/knopf_orange"
+            android:background="@drawable/button_rounded_corners"
             android:orientation="horizontal"
             android:id="@+id/layoutUrwolf"
             android:visibility="gone">
@@ -158,7 +158,7 @@
                 android:layout_marginLeft="16dp"
                 android:layout_marginRight="16dp"
                 android:layout_marginBottom="16dp"
-                android:background="@drawable/knopf_orange"
+                android:background="@drawable/button_rounded_corners"
                 android:orientation="horizontal"
                 android:text="@string/opfer_retten"
                 android:id="@+id/toetenLayoutHexe">
