--- a/app/src/main/res/layout/activity_hostconnectwithplayers.xml
+++ b/app/src/main/res/layout/activity_hostconnectwithplayers.xml
@@ -14,7 +14,8 @@
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
         android:layout_marginBottom="16dp"
-        android:background="@drawable/leiste_orange"
+        android:background="@drawable/button_rounded_corners"
+        android:backgroundTint="@color/orange"
         android:orientation="vertical">
 
         <TextView
