--- a/app/src/main/res/layout/activity_manual.xml
+++ b/app/src/main/res/layout/activity_manual.xml
@@ -24,7 +24,8 @@
             android:textSize="20dp"
             android:text="Zurück"
             android:gravity="center"
-            android:background="@drawable/buttonblue"
+            android:background="@drawable/button_rounded_corners"
+            android:backgroundTint="@color/blau"
             android:layout_marginRight="16dp"
             android:layout_marginLeft="16dp"
             android:layout_marginTop="8dp"/>
