--- a/app/src/main/res/layout/activity_playercard.xml
+++ b/app/src/main/res/layout/activity_playercard.xml
@@ -13,7 +13,8 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
-        android:background="@drawable/leiste_gelb"
+        android:background="@drawable/button_rounded_corners"
+        android:backgroundTint="@color/gelb"
         android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -55,7 +56,7 @@
             android:id="@+id/charakterKarte"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@drawable/knopf_orange"
+            android:background="@drawable/button_rounded_corners"
             android:clickable="true"
             android:gravity="center"
             android:text=""
@@ -86,7 +87,8 @@
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
-        android:background="@drawable/buttonblue"
+        android:background="@drawable/button_rounded_corners"
+        android:backgroundTint="@color/blau"
         android:gravity="center"
         android:text="@string/startbildschirm"
         android:textSize="20sp"
