--- a/app/src/main/res/layout/activity_victory.xml
+++ b/app/src/main/res/layout/activity_victory.xml
@@ -42,7 +42,8 @@
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
-        android:background="@drawable/buttonblue"
+        android:background="@drawable/button_rounded_corners"
+        android:backgroundTint="@color/blau"
         android:gravity="center"
         android:text="@string/startbildschirm"
         android:textSize="20sp"
