--- a/app/src/main/res/layout/fragment_add_players.xml
+++ b/app/src/main/res/layout/fragment_add_players.xml
@@ -14,7 +14,8 @@
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
         android:layout_marginBottom="16dp"
-        android:background="@drawable/leiste_hellgruen"
+        android:background="@drawable/button_rounded_corners"
+        android:backgroundTint="@color/gruen"
         android:orientation="vertical">
 
         <TextView
@@ -41,7 +42,8 @@
         android:orientation="vertical"
         android:layout_marginRight="16dp"
         android:layout_marginLeft="16dp"
-        android:background="@drawable/knopf_grau">
+        android:background="@drawable/button_rounded_corners"
+        android:backgroundTint="@color/grau">
 
         <EditText
             android:id="@+id/nameText"
@@ -62,7 +64,8 @@
             android:layout_height="wrap_content"
             android:textSize="20sp"
             android:text="@string/person_einf_gen"
-            android:background="@drawable/buttonblue"
+            android:background="@drawable/button_rounded_corners"
+            android:backgroundTint="@color/blau"
             android:layout_marginRight="16dp"
             android:layout_marginLeft="16dp"
             android:layout_marginBottom="16dp"/>
