updated hardcoded colors in code

--- a/app/src/main/res/layout-v21/activity_nightlist.xml
+++ b/app/src/main/res/layout-v21/activity_nightlist.xml
@@ -15,7 +15,8 @@
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
         android:layout_marginBottom="16dp"
-        android:background="@drawable/leiste_hellgruen"
+        android:background="@drawable/button_rounded_corners"
+        android:backgroundTint="@color/gruen"
         android:orientation="vertical">
 
         <TextView
@@ -45,7 +46,8 @@
             android:layout_marginLeft="16dp"
             android:layout_marginRight="16dp"
             android:layout_marginBottom="16dp"
-            android:background="@drawable/buttonblue"
+            android:background="@drawable/button_rounded_corners"
+            android:backgroundTint="@color/blau"
             android:gravity="center"
             android:text="@string/weiter"
             android:textSize="20sp" />
@@ -108,7 +110,8 @@
             android:layout_marginLeft="16dp"
             android:layout_marginTop="16dp"
             android:layout_marginRight="16dp"
-            android:background="@drawable/knopf_grau"
+            android:background="@drawable/button_rounded_corners"
+            android:backgroundTint="@color/grau"
             android:orientation="vertical"
             android:visibility="gone">
 
@@ -120,7 +123,8 @@
                 android:layout_marginTop="16dp"
                 android:layout_marginRight="16dp"
                 android:layout_marginBottom="16dp"
-                android:background="@drawable/knopf_hellgruen"
+                android:background="@drawable/button_rounded_corners"
+                android:backgroundTint="@color/grau"
                 android:orientation="horizontal"
                 android:text="@string/opfer_retten"
                 android:id="@+id/layoutRettenHexe">
