--- a/app/src/main/res/layout-v26/activity_playerconnecttohost.xml
+++ b/app/src/main/res/layout-v26/activity_playerconnecttohost.xml
@@ -4,7 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Spieler_Auswahl"
     android:background="@color/grey">
 
     <LinearLayout
@@ -15,7 +14,8 @@
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
         android:layout_marginBottom="16dp"
-        android:background="@drawable/leiste_gelb">
+        android:background="@drawable/button_rounded_corners"
+        android:backgroundTint="@color/gelb">
 
         <TextView
             android:id="@+id/textModus"
@@ -39,7 +39,8 @@
         android:orientation="vertical"
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
-        android:background="@drawable/knopf_grau"
+        android:background="@drawable/button_rounded_corners"
+        android:backgroundTint="@color/grau"
         android:layout_below="@id/layoutModus"
         android:visibility="gone">
 
@@ -64,7 +65,8 @@
             android:layout_marginLeft="16dp"
             android:layout_marginRight="16dp"
             android:layout_marginBottom="16dp"
-            android:background="@drawable/buttonblue"
+            android:background="@drawable/button_rounded_corners"
+            android:backgroundTint="@color/blau"
             android:gravity="center"
             android:text="@string/bereit"
             android:textSize="20sp"
@@ -97,7 +99,8 @@
         android:layout_marginRight="16dp"
         android:layout_below="@id/statusVerbindung"
         android:layout_centerHorizontal="true"
-        android:background="@drawable/knopf_grau"
+        android:background="@drawable/button_rounded_corners"
+        android:backgroundTint="@color/grau"
         android:visibility="gone">
 
         <TextView
@@ -115,7 +118,8 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="16dp"
             android:layout_marginRight="16dp"
-            android:background="@drawable/buttonblue"
+            android:background="@drawable/button_rounded_corners"
+            android:backgroundTint="@color/blau"
             android:orientation="vertical"
             android:layout_marginBottom="16dp">
 
@@ -147,7 +151,7 @@
 <!-- Name eingeben -->
 
 
-    <com.example.tobias.werwolf_v1.SquareLayout
+    <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_centerHorizontal="true"
@@ -161,7 +165,7 @@
         android:id="@+id/cameraview"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
-</com.example.tobias.werwolf_v1.SquareLayout>
+</LinearLayout>
 
 
 <TextView
