--- a/app/src/main/res/layout/fragment_character_selection.xml
+++ b/app/src/main/res/layout/fragment_character_selection.xml
@@ -20,7 +20,7 @@
             android:layout_marginLeft="16dp"
             android:layout_marginRight="16dp"
             android:layout_marginBottom="16dp"
-            android:background="@drawable/button_rounded_corners"
+            android:background="@drawable/leiste_werwolf"
             android:backgroundTint="@color/orange"
             android:orientation="vertical">
 
@@ -81,9 +81,7 @@
             android:layout_marginLeft="16dp"
             android:layout_marginRight="16dp"
             android:layout_marginBottom="16dp"
-            android:paddingTop="16dp"
-            android:paddingLeft="16dp"
-            android:paddingRight="16dp"
+            android:padding="16dp"
             android:background="@drawable/button_rounded_corners"
             android:backgroundTint="@color/grau"
             android:orientation="vertical">
